# drt-savings-account-sc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml
delegation-mock/: Cargo.toml
delegation-mock/meta/: Cargo.toml
delegation-mock/meta/src/: main.rs
delegation-mock/src/: lib.rs
delegation-mock/wasm/: Cargo.toml
delegation-mock/wasm/src/: lib.rs
dex-mock/: Cargo.toml
dex-mock/denali/: init.scen.json
dex-mock/meta/: Cargo.toml
dex-mock/meta/src/: main.rs
dex-mock/src/: lib.rs
dex-mock/wasm/: Cargo.toml
dex-mock/wasm/src/: lib.rs
savings-account/: .gitignore  Cargo.toml
savings-account/meta/: Cargo.toml
savings-account/meta/src/: main.rs
savings-account/src/: common_storage.rs  lib.rs  math.rs  model.rs  ongoing_operation.rs  price_aggregator_proxy.rs  staking_positions_mapper.rs  staking_rewards.rs  tokens.rs
savings-account/tests/: test.rs
savings-account/tests/savings_account_interactions/: mod.rs
savings-account/tests/savings_account_setup/: mod.rs
savings-account/wasm/: Cargo.toml
savings-account/wasm/src/: lib.rs
