[package]
name = "delegation-mock-meta"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2018"
publish = false

[dependencies.delegation-mock]
path = ".."

[dependencies.dharitri-wasm]
version = "0.9.8"

[dependencies.dharitri-wasm-debug]
version = "0.9.8"
