[package]
name = "dex-mock-wasm"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.dex-mock]
path = ".."

[dependencies.dharitri-wasm-node]
version = "0.9.8"

[dependencies.dharitri-wasm-output]
version = "0.9.8"
features = ["wasm-output-mode"]
